# ooxx

./: 1.txt  2.txt  3.txt  CMakeLists.txt  README.md  package.xml  plan.md  task.md  使用方法.txt  重要原则.txt  验收方向.txt
config/: color_thresholds.yaml  mission.yaml
docs/: 01-architecture.md  02-call_chains.md  03-module_index.md  04-problems-and-solutions.md  0705plan.md
launch/: chassis_search.launch  ooxx.launch  ooxx_node.launch
log/: 10-11.txt  10-23.txt  10-36.txt  10-48.txt  11-05.txt  1128.txt  12+13.txt  8-2.txt  8-3-auto-off.txt  8-3.txt  8-39.txt  8-4.txt  9-10.txt  9-30.txt  9-55.txt  dev8-16.txt
scripts/: boustrophedon_planner.py  config_loader.py  depth_projection.py  frontier_navigator.py  global_planner.py  grid_planner.py  lidar_utils.py  local_planner.py  mission_state.py  move_controller.py  nav_feedback.py  occupancy_grid.py  ooxx_cleanup.sh  ooxx_logrun.sh  ooxx_node.py  perimeter_controller.py  pose_estimator.py  search_fsm.py  target_detector.py
scripts/perception/: __init__.py  base.py  classical.py  topic.py
scripts/tracking/: __init__.py  base.py  stub.py
