<?xml version="1.0"?>
<package format="2">
  <name>ooxx</name>
  <version>0.2.0</version>
  <description>合并版实验包：ooxx_old 底盘覆盖搜索 + search_navigation 相机颜色识别</description>
  <maintainer email="student@todo.todo">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>lidar</exec_depend>
  <exec_depend>lidar_driver</exec_depend>
  <exec_depend>driver</exec_depend>
  <exec_depend>camera_driver</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
</package>
